Fix layout issue (cards not centered) on card container

--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ button {
     grid-auto-rows: 250px;
     gap: 50px 20px;
     padding: 50px 0px;
+    justify-items: center;
 }
 
 /* .card {
